2004-08-16  Elliot Lee  <sopwith@redhat.com>

	PR java/9677
	* jcf-parse.c (java_parse_file): Handle filenames with embedded
	spaces, and quoted filelists.

2004-07-01  Release Manager

	* GCC 3.4.1 released.

2004-05-20  H.J. Lu  <hongjiu.lu@intel.com>

	PR java/14315
	Backport from mainline:

	2004-03-23  Tom Tromey  <tromey@redhat.com>

	* jcf-write.c (make_class_file_name): Don't report if mkdir
	failed with EEXIST.

2004-03-15  Andrew Haley  <aph@redhat.com>

	PR java/14581
	* parse.y (java_complete_lhs): Check that final variable has an
	initializer.

2004-04-18  Release Manager

	* GCC 3.4.0 released.

2004-04-12  Michael Chastain  <mec.gnu@mindspring.com>

	PR bootstrap/14893:
	* Make-lang.in (java.install-man): Install from either build
	tree or source tree, whichever has the file first.

2004-03-23  Tom Tromey  <tromey@redhat.com>

	* gcj.texi (Extensions): Document GCJ_PROPERTIES.

2004-03-06  Roger Sayle  <roger@eyesopen.com>

	* jcf-parse.c (java_parse_file): Handle the case that input_filename
	is NULL.

2004-02-26  Andrew Haley  <aph@redhat.com>

	* parse.y (check_interface_throws_clauses): Check for
	!METHOD_INVISIBLE (iface_method).
	* class.c (layout_class_methods): Check for CLASS_INTERFACE as
	well as CLASS_ABSTRACT.
	
2004-02-22  Matthias Klose  <doko@debian.org>

	Taken from mainline:

	2004-02-13  Geoffrey Keating  <geoffk@apple.com>

	* Make-lang.in: Install man pages under the same names
	(possibly transformed) as the program they document.

	2004-02-16  Geoffrey Keating  <geoffk@apple.com>

	* Make-lang.in (java.install-man): Add extra dependencies.

2004-02-07  Kazu Hirata  <kazu@cs.umass.edu>

	* typeck.c: Update copyright.

2004-02-05  Kelley Cook  <kcook@gcc.gnu.org>

	Make-lang.in (po-generated):  Delete.

2004-01-30  Kelley Cook  <kcook@gcc.gnu.org>

	* Make-lang.in (doc/gcj.dvi): Use $(abs_docdir).

2004-01-28  Andrew Pinski  <pinskia@physics.uc.edu>

	* expr.c (build_field_ref): Move variable
	definition up.
